<resources>
    <string name="app_name">Anantha</string>
    <string name="New1">Register</string>
    <string name="New2">Log-in</string>
    <string name="action_settings">Settings</string>
        <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="email">email</string>
    <string name="Name">name</string>
    <string name="phone">phone</string>
    <string name="code">pin-code</string>
    <string name="password">password</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Register</string>
    <string name="title_activity_main22">Profile</string>
</resources>
